column-gap issue has been fixed

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -50,12 +50,13 @@
       padding: 0;
       list-style-type: none;
       margin: 0;
+      gap: 0;
       li{
+        max-width: 196px;
         line-height: 19px;
         height: 19px;
         margin-bottom: 10px;
-        box-sizing: border-box;
-        overflow: hidden;
+        white-space: nowrap;
         &:nth-of-type(6){
           display: none;
         }
